src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

@font-face {
	font-family : "circles_names";
	src : local('Rye'), url(./assets/fonts/Rye-Regular.ttf);
}
@font-face {
	font-family : "btn_prgs";
	src : local('Audiowide'), url(./assets/fonts/Audiowide-Regular.ttf);
}

html {
  overflow-x: hidden;
}

body {
	background-image: url("./assets/background.gif");
	background-repeat: repeat;
}

.card-title {
	font-family: "circles_names";
  margin: 0;
  font-size: 1.2em;
}

.cicon{
  display: inline-block;
  height: 1.2em;
  width: 1.2em;
}

a:hover {
  text-decoration: none;
}

/*disord*/
@keyframes discord {
	0% {height:70px; width:250px;}
	 100% {height:500px;width:350px;}
}
@keyframes discord-c {
	0% {height:500px;width:350px;}
    100% {height:70px; width:250px;}
}
.discord {
	animation-name: discord-c;
	animation-duration: 0.5s;
	animation-play-state: pause;
	float:left;
    height:70px;
	width:250px;
	margin-left: 10px;
	margin-top: 6px;
}

.discord:hover {
	height:500px;
	width:350px;
	float:left;
	animation-name: discord;
	animation-duration: 0.5s;
	animation-play-state: pause;
}

.banner {
  min-width: 100vw;
  width: auto;
  height: 400px;
  background: url('./assets/banner.jpg') no-repeat center center;
  background-size: cover;
}

.text-nowrap {
  overflow: hidden;
  text-overflow: clip;
}

